--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "debug": "^2.6.9",
     "express": "^4.14.0",
     "fresh": "^0.5.2",
+    "growl": "^1.10.0",
+    "mime": "^1.4.1",
     "mongodb": "^2.2.5",
     "mongoose": "^4.5.9"
   },
