--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "growl": "^1.10.0",
     "mime": "^1.4.1",
     "mongodb": "^2.2.5",
-    "mongoose": "^4.5.9"
+    "mongoose": "^4.5.9",
+    "superagent": "^3.7.0"
   },
   "devDependencies": {
     "expect": "^1.20.2",
